# freelancehub

./: .dockerignore  .env.example  .gitignore  alembic.ini  entrypoint.sh  pyproject.toml  typos.toml
alembic/: env.py
alembic/versions/: 0eb2d47d3797_fix_in_relationships.py  2aeff294ff24_add_and_fix_entities_models_and_mappers.py  426b77623444_add_relationship_between_models.py  9681047ec1a2_convert_user_id_to_uuid_with_data_.py  a1e1421b4214_update_user_table.py  b195074f2152_create_users_table.py  bd1b6f99b1e5_add_missing_constraints.py  d036e04596ff_add_multi_tenant_data_isolation.py
app/: main.py
app/application/services/: auth_service.py
app/application/use_cases/: __init__.py  create_user.py  delete_user.py  get_user.py  get_users.py  update_user.py
app/core/: config.py  dependencies.py
app/domain/: enums.py
app/domain/entities/: __init__.py  base_entity.py  client.py  contract.py  invoice.py  message.py  milestone.py  notification.py  project.py  proposal.py  review.py  time_entry.py  users.py
app/infrastructure/database/: base.py  base_model.py  session.py
app/infrastructure/database/mappers/: base_mapper.py  user_mapper.py
app/infrastructure/database/models/: __init__.py  client_model.py  contract_model.py  invoice_model.py  project_model.py  project_modelp.py  user_model.py
app/infrastructure/database/repositories/: base_repository.py  user_repository.py
app/infrastructure/database/sqlalchemy/: base_model.py  session.py
app/infrastructure/database/sqlalchemy/mappers/: __init__.py  client_mapper.py  contract_mapper.py  invoice_mapper.py  project_mapper.py  user_mapper.py
app/infrastructure/database/sqlalchemy/models/: __init__.py  client_model.py  contract_model.py  (+9 more)
app/interfaces/: dependencies.py
app/interfaces/api/v1/: api.py
app/interfaces/schemas/: __init__.py  user_schema.py
app/tests/: test_main.py
docker/: Dockerfile  docker-compose.yml
(+11 files in other folders)
